licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//llo:srcs",
        "//opt:srcs",
        "//pbm:srcs",
        "//pybinder:srcs",
        "//graphmgr:srcs",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/*"]),
)
