licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//llo:srcs",
        "//pybinder:srcs",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/*"]),
)
