licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

load("@protobuf_rules//cpp:cpp_proto_library.bzl", "cpp_proto_library")

filegroup(
    name = "srcs",
    srcs = ["//graphmgr:protos", "BUILD.bazel"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

######### LIBRARY #########

proto_library(
    name = "graphmgr_proto",
    srcs = ["//graphmgr:protos"],
    deps = ["//pbm:pbm_proto"],
)

cpp_proto_library(
    name = "graphmgr_cc_proto",
    deps = ["//graphmgr:graphmgr_proto"],
    has_services = True,
)
