licenses(["notice"])

load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + [":protos", "BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

filegroup(
    name = "test_data",
    srcs = glob([
        "data/*.pb",
        "data/*.txt",
    ]),
)

######### LIBRARY #########

proto_library(
    name = "proto_lib",
    srcs = ["//pbm:protos"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "cc_proto",
    protos = ["//pbm:protos"],
    with_grpc = False,
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "py_proto",
    protos = ["//pbm:protos"],
    with_grpc = False,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pbm",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = [
        "@com_github_mingkaic_tenncor//ade:ade",
        "//pbm:cc_proto",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        "//pbm:pbm",
        "@com_github_mingkaic_tenncor//dbg:dbg",
        "@com_google_googletest//:gtest",
    ],
    copts = ["-std=c++14"],
    data = [":test_data"],
)
