licenses(["notice"])

load("@protobuf_rules//cpp:rules.bzl", "cc_proto_library")
load("@protobuf_rules//python:rules.bzl", "py_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + [":protos", "BUILD.bazel"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

proto_library(
    name = "proto_lib",
    srcs = ["//pbm:protos"],
)

cc_proto_library(
    name = "cc_proto",
    protos = ["//pbm:protos"],
    with_grpc = False,
)

py_proto_library(
    name = "py_proto",
    protos = ["//pbm:protos"],
    with_grpc = False,
)

cc_library(
    name = "pbm",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = [
        "@tenncor//ade:ade",
        "//pbm:cc_proto",
    ],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        "//pbm:pbm",
        "@tenncor//dbg:dbg",
        "@com_google_googletest//:gtest",
    ],
    copts = ["-std=c++14"],
    data = glob([
        "data/*.pb",
        "data/*.txt",
    ]),
)
