licenses(["notice"])

load("@protobuf_rules//cpp:cpp_proto_library.bzl", "cpp_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["//pbm:protos", "BUILD.bazel"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

proto_library(
    name = "pbm_proto",
    srcs = ["//pbm:protos"],
)

cpp_proto_library(
    name = "pbm_cc_proto",
    deps = ["//pbm:pbm_proto"],
)

cc_library(
    name = "pbm",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = [
        "@com_github_mingkaic_tenncor//ade:ade",
        "//pbm:pbm_cc_proto",
    ],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = ["//pbm:test_srcs"],
    deps = [
        "//pbm:pbm",
        "@com_github_mingkaic_tenncor//dbg:dbg",
        "@gtest//:gtest",
    ],
    copts = ["-std=c++14"],
    data = glob([
        "data/*.pb",
        "data/*.txt",
    ]),
)
