licenses(["notice"])

load("//third_party/drake_rules:pybind.bzl", "pybind_library")

filegroup(
    name = "srcs",
    srcs = glob(["demo/*.cpp"]) + [
        "//eqns:srcs",
        "//layr:srcs",
        "//modl:srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "modl_wrapper",
    srcs = glob(["python/*.cpp"]),
    deps = [
        "//rocnnet/modl:modl",
        "@pybind11",
    ],
)

pybind_library(
    name = "modl_py",
    cc_deps = [ ":modl_wrapper" ],
    visibility = ["//visibility:public"],
)

######### DEMOS #########

cc_binary(
    name = "gd_demo",
    srcs = ["demo/gd_demo.cpp"],
    copts = ["-std=c++14"],
    deps = [
        "//rocnnet/trainer:trainer",
        "@cppkg//flag:flag",
        "@tenncor//dbg:dbg",
    ],
    data = glob(["pretrained/*"]),
)

cc_binary(
    name = "dbn_demo",
    srcs = ["demo/dbn_demo.cpp"],
    copts = ["-std=c++14"],
    deps = [
        "//rocnnet/trainer:trainer",
        "//rocnnet/data:data",
        "@cppkg//flag:flag",
        "@tenncor//dbg:dbg",
    ],
    data = glob(["pretrained/*"]),
)
