licenses(["notice"])

load("//third_party/drake_rules:pybind.bzl", "pybind_library")

filegroup(
    name = "srcs",
    srcs = glob(["demo/*.cpp"]) + [
        "//eqns:srcs",
        "//layr:srcs",
        "//modl:srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

pybind_library(
    name = "rocnnet_py",
    cc_srcs = glob(["python/*.cpp"]),
    cc_deps = ["//rocnnet/trainer:trainer"],
    py_deps = ["//llo:llo_py"],
    visibility = ["//visibility:public"],
)

######### DEMOS #########

cc_binary(
    name = "gd_demo",
    srcs = ["demo/gd_demo.cpp"],
    copts = ["-std=c++14"],
    deps = [
        "//rocnnet/trainer:trainer",
        "@cppkg//flag:flag",
        "@tenncor//dbg:dbg",
    ],
    data = glob(["pretrained/*"]),
)

cc_binary(
    name = "dbn_demo",
    srcs = ["demo/dbn_demo.cpp"],
    copts = ["-std=c++14"],
    deps = [
        "//rocnnet/trainer:trainer",
        "//rocnnet/data:data",
        "@cppkg//flag:flag",
        "@tenncor//dbg:dbg",
    ],
    data = glob(["pretrained/*"]),
)

py_binary(
    name = "pygd_demo",
    srcs = ["pdemo/pygd_demo.py"],
    deps = [":rocnnet_py"],
    data = glob(["pretrained/*"]),
)
