licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["*.py"]) + ["BUILD.bazel"],
)

######### LIBRARY #########

py_binary(
    name = "tfgen",
    srcs = glob(["tfgen.py"]),
    deps = ["@com_github_mingkaic_testify//retrop:retrop"],
    data = ["//:credentials"]
)
